[gd_scene load_steps=3 format=3 uid="uid://c5csebd04d30e"]

[ext_resource type="Script" path="res://Scripts/save_window_script.gd" id="1_ij1w5"]
[ext_resource type="Theme" uid="uid://dfeo3ebchf3ul" path="res://Resources/Themes/Default_Theme.tres" id="1_megnc"]

[node name="SaveWindowUi" type="Window"]
title = "Save Game"
position = Vector2i(0, 36)
size = Vector2i(180, 125)
exclusive = true
unresizable = true
always_on_top = true
theme = ExtResource("1_megnc")
script = ExtResource("1_ij1w5")

[node name="ColorRect" type="ColorRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.517184, 0.517184, 0.517184, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -50.5
offset_right = 80.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Save_Button" type="Button" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
text = "Save"

[node name="Save_as_Button" type="Button" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save as..."

[node name="Save_Name" type="LineEdit" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
placeholder_text = "Save name here..."
alignment = 1

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Save_Button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Save_as_Button" to="." method="_on_save_as_button_pressed"]
[connection signal="text_changed" from="ColorRect/VBoxContainer/Save_Name" to="." method="_on_save_name_text_changed"]
